# KhazarLLMs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md  README.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: ARCHITECTURE.md  USAGE_GUIDE.md
examples/: basic_ensemble.py  parallel_debate.py  showcase_creative_tasks.py
khazar_llms/: __init__.py  __main__.py  cli.py
khazar_llms/agents/: __init__.py  base.py  personas.py
khazar_llms/orchestration/: __init__.py  ensemble.py  session.py
khazar_llms/utils/: __init__.py  llm_client.py
tests/: __init__.py  test_agents.py  test_ensemble.py  test_llm_client.py
