[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khazar-llms"
version = "0.1.0"
description = "A system of collective creativity management for ensemble LLMs"
authors = [{name = "Nick", email = "nick@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["khazar_llms", "khazar_llms.agents", "khazar_llms.orchestration", "khazar_llms.utils"]
